# rust-money

./: Cargo.toml
src/: constants.rs  currency.rs  formatter.rs  lib.rs
